--- a/package.json
+++ b/package.json
@@ -50,11 +50,6 @@
     "tabWidth": 4,
     "useTabs": true
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "lint-staged": {
     "*.js": [
       "prettier --write",
@@ -144,6 +139,7 @@
     "react-native-browser-polyfill": "0.1.2",
     "react-native-button": "git+https://github.com/MetaMask/react-native-button.git#fd79f4d6c8ced4086ba6e3021b6ed6d4a3e19cf7",
     "react-native-camera": "^3.36.0",
+    "react-native-chart-kit": "^6.11.0",
     "react-native-confetti": "^0.1.0",
     "react-native-confetti-cannon": "^1.5.0",
     "react-native-crypto": "2.1.2",
