--- a/package.json
+++ b/package.json
@@ -171,6 +171,7 @@
     "react-native-sensors": "5.3.0",
     "react-native-share": "^5.2.2",
     "react-native-splash-screen": "git+https://github.com/MetaMask/react-native-splash-screen.git",
+    "react-native-status-bar-height": "^2.6.0",
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "12.1.0",
     "react-native-swipe-gestures": "1.0.3",
