--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "react-native-level-fs/**/semver": "^4.3.2"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.19",
     "@estebanmino/controllers": "^3.3.17",
     "@exodus/react-native-payments": "https://github.com/wachunei/react-native-payments.git#package-json-hack",
     "@metamask/contract-metadata": "^1.23.0",
@@ -111,6 +112,7 @@
     "ethjs-unit": "0.1.6",
     "events": "3.0.0",
     "fuse.js": "3.4.4",
+    "graphql": "^15.5.0",
     "https-browserify": "0.0.1",
     "is-url": "^1.2.4",
     "json-rpc-engine": "^6.1.0",
