--- a/package.json
+++ b/package.json
@@ -162,6 +162,7 @@
     "react-native-os": "^1.2.6",
     "react-native-paper": "^4.9.1",
     "react-native-progress": "3.5.0",
+    "react-native-progress-circle": "^2.1.0",
     "react-native-push-notification": "git+https://github.com/MetaMask/react-native-push-notification.git#androidx",
     "react-native-qrcode-svg": "5.1.2",
     "react-native-randombytes": "^3.5.3",
@@ -177,6 +178,7 @@
     "react-native-step-indicator": "^1.0.3",
     "react-native-svg": "12.1.0",
     "react-native-swipe-gestures": "1.0.3",
+    "react-native-swipe-list-view": "^3.2.8",
     "react-native-tcp": "aprock/react-native-tcp#11/head",
     "react-native-v8": "^0.62.2-patch.1",
     "react-native-vector-icons": "6.4.2",
