--- a/ios/BITG/BITG.entitlements
+++ b/ios/BITG/BITG.entitlements
@@ -11,9 +11,6 @@
 		<string>applinks:bitg-alternate.app.link</string>
 	</array>
 	<key>com.apple.developer.in-app-payments</key>
-	<array>
-		<string>merchant.io.metamask.wyre</string>
-		<string>merchant.io.metamask.wyre.test</string>
-	</array>
+	<array/>
 </dict>
 </plist>
