--- a/ios/BITG/BITGDebug.entitlements
+++ b/ios/BITG/BITGDebug.entitlements
@@ -11,9 +11,6 @@
 		<string>applinks:metamask-alternate.app.link</string>
 	</array>
 	<key>com.apple.developer.in-app-payments</key>
-	<array>
-		<string>merchant.io.metamask</string>
-		<string>merchant.io.metamask-test</string>
-	</array>
+	<array/>
 </dict>
 </plist>
