--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -110,12 +110,12 @@ project.ext.react = [
 
 apply from: "../../node_modules/react-native/react.gradle"
 
-project.ext.sentryCli = [
-	logLevel: "debug",
-	sentryProperties: System.getenv('SENTRY_PROPERTIES') ? System.getenv('SENTRY_PROPERTIES') : '../../sentry.properties'
-]
-
-apply from: "../../node_modules/@sentry/react-native/sentry.gradle"
+//project.ext.sentryCli = [
+//	logLevel: "debug",
+//	sentryProperties: System.getenv('SENTRY_PROPERTIES') ? System.getenv('SENTRY_PROPERTIES') : '../../sentry.properties'
+//]
+//
+//apply from: "../../node_modules/@sentry/react-native/sentry.gradle"
 
 /**
  * Set this to true to create two separate APKs instead of one:
@@ -163,11 +163,11 @@ android {
 	}
 
 	defaultConfig {
-		applicationId "io.metamask"
+		applicationId "org.bitg"
 		minSdkVersion rootProject.ext.minSdkVersion
 		targetSdkVersion rootProject.ext.targetSdkVersion
-		versionCode 750
-		versionName "2.5.0"
+		versionCode 1
+		versionName "1.0.0"
 		multiDexEnabled true
 		testBuildType System.getProperty('testBuildType', 'debug')
 		missingDimensionStrategy "minReactNative", "minReactNative46"
